--- a/eas-update/action.yml
+++ b/eas-update/action.yml
@@ -7,7 +7,7 @@ branding:
   color: gray-dark
 runs:
   using: node16
-  main: ../build/expo-update/index.js
+  main: ../build/eas-update/index.js
 inputs:
   project:
     description: Path to the Expo project, relative from the workspace
