--- a/eas-update/action.yml
+++ b/eas-update/action.yml
@@ -30,9 +30,6 @@ inputs:
     description: GitHub access token to comment on PRs
     required: false
     default: ${{ github.token }}
-  ios-id:
-    description: An unique identifier for the IOS EAS update 
-    required: true
-  android-id:
-    description: An unique identifier for the Android EAS update
+  update-result:
+    description: The result parsed from EAS update 
     required: true
